--- a/opensap-python-course/week_3_additional_exercises.ipynb
+++ b/opensap-python-course/week_3_additional_exercises.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,18 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'league' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Downloads\\Onedrive\\python\\python\\opensap-python-course\\week_3_additional_exercises.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000010?line=0'>1</a>\u001b[0m new_league \u001b[39m=\u001b[39m {}\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000010?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m element \u001b[39min\u001b[39;00m league:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000010?line=2'>3</a>\u001b[0m     new_league[element[\u001b[39m0\u001b[39m]] \u001b[39m=\u001b[39m (element[\u001b[39m1\u001b[39m], element[\u001b[39m2\u001b[39m], element[\u001b[39m3\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000010?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m tm \u001b[39min\u001b[39;00m new_league:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'league' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Man City (1, 31, 74)\n",
+      "Liverpool (2, 34, 82)\n",
+      "Chelsea (3, 33, 66)\n"
      ]
     }
    ],
@@ -180,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chelsea is currently on position 3\n",
+      "(3, 33, 66)\n"
+     ]
+    }
+   ],
    "source": [
     "team = input(\"Please enter the name of a team: \")\n",
     "print(team, \"is currently on position\", new_league[team][0])\n",
@@ -199,33 +206,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'new_league' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Downloads\\Onedrive\\python\\python\\opensap-python-course\\week_3_additional_exercises.ipynb Cell 15'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000014?line=1'>2</a>\u001b[0m team2 \u001b[39m=\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mLiverpool\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m34\u001b[39m, \u001b[39m82\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000014?line=2'>3</a>\u001b[0m team3 \u001b[39m=\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mChelsea\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m33\u001b[39m, \u001b[39m66\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000014?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(new_league)):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000014?line=4'>5</a>\u001b[0m     new_team \u001b[39m=\u001b[39m new_league[i][\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Downloads/Onedrive/python/python/opensap-python-course/week_3_additional_exercises.ipynb#ch0000014?line=5'>6</a>\u001b[0m     new_pos \u001b[39m=\u001b[39m new_league[i][\u001b[39m1\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'new_league' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Man City (1, 31, 74, 2)\n",
+      "Liverpool (2, 34, 82, 3)\n",
+      "Chelsea (3, 33, 66, 5)\n"
      ]
     }
    ],
    "source": [
-    "team1 = (\"Man City\", 1, 31, 74)\n",
-    "team2 = (\"Liverpool\", 2, 34, 82)\n",
-    "team3 = (\"Chelsea\", 3, 33, 66)\n",
-    "for i in range(len(new_league)):\n",
-    "    new_team = new_league[i][0]\n",
-    "    new_pos = new_league[i][1]\n",
-    "    gameplayed = new_league[i][2]\n",
-    "    points = new_league[i][3]\n",
-    "    del new_league[i]\n",
-    "    goal_diff = int(input(\"Plaese enter the goal diff:\"))\n",
-    "    new_league[new_team] = (new_pos, gameplayed, points, goal_diff)\n",
+    "for tm in new_league:\n",
+    "    new_pos = new_league[tm][0]\n",
+    "    gameplayed = new_league[tm][1]\n",
+    "    points = new_league[tm][2]\n",
+    "    #del new_league[tm]\n",
+    "    question = \"Please enter the goal diff of: \" + tm + \"?\"\n",
+    "    goal_diff = int(input(question))\n",
+    "    new_league[tm] = (new_pos, gameplayed, points, goal_diff)\n",
     "\n",
     "for tm in new_league:\n",
     "    print(tm, new_league[tm])"
@@ -241,10 +243,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Man City {'position': 1, 'gameplayed': 31, 'points': 74, 'goal_diff': 2}\n",
+      "Liverpool {'position': 2, 'gameplayed': 34, 'points': 82, 'goal_diff': 3}\n",
+      "Chelsea {'position': 3, 'gameplayed': 33, 'points': 66, 'goal_diff': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, values in new_league.items():\n",
+    "    team_info = {}\n",
+    "    team_info[\"position\"] = values[0]\n",
+    "    team_info[\"gameplayed\"] = values[1]\n",
+    "    team_info[\"points\"] = values[2]\n",
+    "    team_info[\"goal_diff\"] = values[3]\n",
+    "\n",
+    "    new_league[key] = team_info\n",
+    "\n",
+    "for key, values in new_league.items():\n",
+    "    print(key, values)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,10 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Man City {'position': 1, 'gameplayed': 31, 'points': 74, 'goal_diff': 2, 'average': 2.3870967741935485}\n",
+      "Liverpool {'position': 2, 'gameplayed': 34, 'points': 82, 'goal_diff': 3, 'average': 2.411764705882353}\n",
+      "Chelsea {'position': 3, 'gameplayed': 33, 'points': 66, 'goal_diff': 5, 'average': 2.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, values in new_league.items():\n",
+    "    avg = values[\"points\"] / values[\"gameplayed\"]\n",
+    "    values[\"average\"] = avg\n",
+    "\n",
+    "for key, values in new_league.items():\n",
+    "    print(key, values)"
+   ]
   }
  ],
  "metadata": {
