--- a/opensap-python-course/openSAP_python1_Week_4_Unit_3_readdata_notebook.ipynb
+++ b/opensap-python-course/openSAP_python1_Week_4_Unit_3_readdata_notebook.ipynb
@@ -63,9 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit,\n",
+      "sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n",
+      "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris\n",
+      "nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in\n",
+      "reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla\n",
+      "pariatur. Excepteur sint occaecat cupidatat non proident, sunt in\n",
+      "culpa qui officia deserunt mollit anim id est laborum.\n"
+     ]
+    }
+   ],
    "source": [
     "# Open file\n",
     "with open(\"lorem_ipsum.txt\", \"r\") as file:\n",
@@ -85,9 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First round\n",
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit,\n",
+      "sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n",
+      "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris\n",
+      "nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in\n",
+      "reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla\n",
+      "pariatur. Excepteur sint occaecat cupidatat non proident, sunt in\n",
+      "culpa qui officia deserunt mollit anim id est laborum.\n",
+      "Second round\n"
+     ]
+    }
+   ],
    "source": [
     "# open file\n",
     "with open(\"lorem_ipsum.txt\", \"r\") as file:\n",
@@ -125,9 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lorem ipsum dolor sit amet, consectetur adipiscing elit,\\n', 'sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\\n', 'Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris\\n', 'nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in\\n', 'reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla\\n', 'pariatur. Excepteur sint occaecat cupidatat non proident, sunt in\\n', 'culpa qui officia deserunt mollit anim id est laborum.']\n"
+     ]
+    }
+   ],
    "source": [
     "# Open file\n",
     "with open(\"lorem_ipsum.txt\", \"r\") as file:\n",
@@ -146,10 +184,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n",
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "szum = 0\n",
+    "with open(\"numbers2.txt\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        szum += int(line)\n",
+    "print(szum)\n",
+    "\n",
+    "szum = 0\n",
+    "with open(\"numbers1.txt\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        nums = line.strip().split(' ')\n",
+    "        for number in nums:\n",
+    "            szum += int(number)\n",
+    "print(szum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "996\n",
+      "996\n",
+      "994\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = []\n",
+    "with open(\"randomnumbers.txt\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        nums.append(int(line.strip()))\n",
+    "nums = sorted(nums)\n",
+    "\n",
+    "for num in nums[-1:-4:-1]:\n",
+    "    print(num)"
+   ]
   }
  ],
  "metadata": {
@@ -169,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.6"
   },
   "mimetype": "text/x-python",
   "name": "python",
