--- a/opensap-python-course/week_4_additional_exercises.ipynb
+++ b/opensap-python-course/week_4_additional_exercises.ipynb
@@ -208,21 +208,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ('zoli', 'jambor')\n",
+      "2 ('billy', 'gates')\n",
+      "3 ('name1', 'firstname1')\n",
+      "4 ('name2', 'firstname2')\n"
+     ]
+    }
+   ],
    "source": [
     "# 1)Read the file and write it's content into a dictionary\n",
+    "newstudent_dict = {}\n",
+    "with open(\"students.txt\") as newfile:\n",
+    "    for line in newfile:\n",
+    "        newstudents = line.strip().split(\";\")\n",
+    "        newstudent_dict[newstudents[0]] = (newstudents[1], newstudents[2])\n",
     "\n",
     "        \n",
     "# 2)Get new the data\n",
+    "studentid = newstudents[0]\n",
     "\n",
+    "studentid = input(\"Please enter the student id: \")\n",
+    "while studentid != \"\":    \n",
+    "    name = input(\"Please enter the student name: \")\n",
+    "    first_name = input(\"Please enter the student first name: \")\n",
+    "    newstudent_dict[studentid] = (name, first_name)\n",
+    "    studentid = input(\"Please enter the student id: \")\n",
     "\n",
     "# 3)Print the data\n",
-    "\n",
+    "for student in newstudent_dict:\n",
+    "    print(student, newstudent_dict[student])\n",
     "    \n",
     "# 4)Write data back to file\n",
-    "\n"
+    "with open(\"students2.txt\", \"w\") as wfile:\n",
+    "    for student in newstudent_dict:\n",
+    "        datastring = student + \";\" + newstudent_dict[student][0] + \";\" + newstudent_dict[student][1] + \"\\n\"\n",
+    "        wfile.write(datastring)\n"
    ]
   },
   {
@@ -260,10 +287,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------------\n",
+      "| h[m] / w[kg] | 50   | 55   | 60   | 65   | 70   | 75   | 80   | \n",
+      "------------------------------------------------------------------\n",
+      "|          1.5 | 22.2 | 24.4 | 26.7 | 28.9 | 31.1 | 33.3 | 35.6 | \n",
+      "------------------------------------------------------------------\n",
+      "|         1.55 | 20.8 | 22.9 | 25.0 | 27.1 | 29.1 | 31.2 | 33.3 | \n",
+      "------------------------------------------------------------------\n",
+      "|          1.6 | 19.5 | 21.5 | 23.4 | 25.4 | 27.3 | 29.3 | 31.2 | \n",
+      "------------------------------------------------------------------\n",
+      "|         1.65 | 18.4 | 20.2 | 22.0 | 23.9 | 25.7 | 27.5 | 29.4 | \n",
+      "------------------------------------------------------------------\n",
+      "|          1.7 | 17.3 | 19.0 | 20.8 | 22.5 | 24.2 | 26.0 | 27.7 | \n",
+      "------------------------------------------------------------------\n",
+      "|         1.75 | 16.3 | 18.0 | 19.6 | 21.2 | 22.9 | 24.5 | 26.1 | \n",
+      "------------------------------------------------------------------\n",
+      "|          1.8 | 15.4 | 17.0 | 18.5 | 20.1 | 21.6 | 23.1 | 24.7 | \n",
+      "------------------------------------------------------------------\n",
+      "|         1.85 | 14.6 | 16.1 | 17.5 | 19.0 | 20.5 | 21.9 | 23.4 | \n",
+      "------------------------------------------------------------------\n",
+      "|          1.9 | 13.9 | 15.2 | 16.6 | 18.0 | 19.4 | 20.8 | 22.2 | \n",
+      "------------------------------------------------------------------\n",
+      "|         1.95 | 13.1 | 14.5 | 15.8 | 17.1 | 18.4 | 19.7 | 21.0 | \n",
+      "------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "COLUMNS = [\"h[m] / w[kg]\", \"50\", \"55\", \"60\", \"65\", \"70\", \"75\", \"80\"]\n",
+    "maxlen = 0\n",
+    "for c in COLUMNS:\n",
+    "    if len(c) > maxlen:\n",
+    "        maxlen = len(c)\n",
+    "\n",
+    "first = 1.50\n",
+    "\n",
+    "rows = []\n",
+    "rows.append(COLUMNS)\n",
+    "for i in range(10):\n",
+    "    newcolumns = []\n",
+    "    height = first + i * 0.05\n",
+    "    newcolumns.append(str(height))\n",
+    "    for j in range(1, len(COLUMNS)):\n",
+    "        weight = int(COLUMNS[j])\n",
+    "        newcolumns.append(str(weight / height ** 2))\n",
+    "    rows.append(newcolumns)\n",
+    "\n",
+    "strng = \"\"\n",
+    "for elem in COLUMNS:\n",
+    "    for i in range(len(elem) + 5):\n",
+    "        strng += \"-\"\n",
+    "\n",
+    "print(strng)\n",
+    "\n",
+    "print(\"| \", end=\"\")\n",
+    "print(f\"{COLUMNS[0]:12}\", end=\" | \")\n",
+    "for i in range(1, len(COLUMNS)):\n",
+    "    print(f\"{COLUMNS[i]:4s}\", end=\" | \")\n",
+    "\n",
+    "print(\"\\n\" + strng)\n",
+    "\n",
+    "for i in range(1, len(rows)):\n",
+    "    print(\"| \", end=\"\")\n",
+    "    print(f\"{round(float(rows[i][0]), 2):12}\", end=\" | \")\n",
+    "    for j in range(1, len(rows[i])):\n",
+    "        print(f\"{round(float(rows[i][j]), 1):4}\", end=\" | \")\n",
+    "    print(\"\\n\" + strng)"
+   ]
   }
  ],
  "metadata": {
