--- a/opensap-python-course/Week_5_additional_exercises.ipynb
+++ b/opensap-python-course/Week_5_additional_exercises.ipynb
@@ -44,10 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_even_numbers(n):\n",
+    "    _sum = 0\n",
+    "    act_num = 2\n",
+    "    for _ in range(n):\n",
+    "        _sum += act_num\n",
+    "        act_num += 2\n",
+    "    print(_sum)\n",
+    "\n",
+    "sum_even_numbers(6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,10 +89,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 6, 12, 20, 30, 42, 56, 72, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def ispronic(n):\n",
+    "    flag = False\n",
+    "    ispronic_num = round(math.sqrt(n))\n",
+    "    if n == ispronic_num * (ispronic_num + 1):\n",
+    "        flag = True\n",
+    "    return flag\n",
+    "\n",
+    "pronic_nums = []\n",
+    "for i in range(101):\n",
+    "    if ispronic(i):\n",
+    "        pronic_nums.append(i)\n",
+    "\n",
+    "print(pronic_nums)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +130,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 18, 20, 24, 30, 36, 40, 42, 48, 54, 56, 60, 66, 70, 72, 78, 80, 84, 88, 90, 96, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isabundant(n):\n",
+    "    divisors = []\n",
+    "    for i in range(1, n):\n",
+    "        if n % i == 0:\n",
+    "            divisors.append(i)\n",
+    "    flag = False\n",
+    "    if sum(divisors) > n:\n",
+    "        flag = True\n",
+    "    return flag\n",
+    "\n",
+    "abundant_nums = []\n",
+    "for i in range(101):\n",
+    "    if isabundant(i):\n",
+    "        abundant_nums.append(i)\n",
+    "\n",
+    "print(abundant_nums)"
+   ]
   },
   {
    "cell_type": "code",
@@ -119,16 +185,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is a narcisstic number.\n",
+      "2 is a narcisstic number.\n",
+      "3 is a narcisstic number.\n",
+      "4 is a narcisstic number.\n",
+      "5 is a narcisstic number.\n",
+      "6 is a narcisstic number.\n",
+      "7 is a narcisstic number.\n",
+      "8 is a narcisstic number.\n",
+      "9 is a narcisstic number.\n",
+      "153 is a narcisstic number.\n",
+      "370 is a narcisstic number.\n",
+      "371 is a narcisstic number.\n",
+      "407 is a narcisstic number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def number_of_digits(n):\n",
+    "    return len(str(n))\n",
+    "\n",
+    "def digits(n):\n",
+    "    numstr = []\n",
+    "    n = str(n)\n",
+    "    for index in n:\n",
+    "        numstr.append(int(index))\n",
+    "    return numstr\n",
+    "\n",
+    "def isnarcisstic(digits_of_num, number_of_orig_number, orig_number):\n",
+    "    squares = []\n",
+    "    for actual_number in digits_of_num:\n",
+    "        squares.append(actual_number ** number_of_orig_number)\n",
+    "    return sum(squares) == orig_number\n",
+    "\n",
+    "numbers_1000 = [(x, isnarcisstic(digits(x), number_of_digits(x), x)) for x in range(1, 1001)]\n",
+    "\n",
+    "for i in numbers_1000:\n",
+    "    if i[1] is True:\n",
+    "        print(f\"{i[0]} is a narcisstic number.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`42` is pronic, abundant but not narcissitic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4e80de75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 is pronic: True, abundant: True, narcisstic: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"42 is pronic: {ispronic(42)}, abundant: {isabundant(42)}, narcisstic: {isnarcisstic(digits(42), number_of_digits(42), 42)}\")"
    ]
   },
   {
@@ -151,10 +277,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 1]\n",
+      "[1, 2, 1]\n",
+      "[1, 3, 3, 1]\n",
+      "[1, 4, 6, 4, 1]\n",
+      "[1, 5, 10, 10, 5, 1]\n",
+      "[1, 6, 15, 20, 15, 6, 1]\n",
+      "[1, 7, 21, 35, 35, 21, 7, 1]\n",
+      "[1, 8, 28, 56, 70, 56, 28, 8, 1]\n",
+      "[1, 9, 36, 84, 126, 126, 84, 36, 9, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pascal_tr = [[1]]\n",
+    "def pascal_triangle(pascal, n):\n",
+    "    for i in range(1, n):\n",
+    "        newline = [1]\n",
+    "        for j in range(1, i):\n",
+    "            newline.append(add_num(pascal, i, j))\n",
+    "        newline.append(1)\n",
+    "        pascal.append(newline)\n",
+    "    return pascal\n",
+    "\n",
+    "def add_num(pascal, i, j):\n",
+    "    return pascal[i-1][j-1] + pascal[i-1][j]\n",
+    "\n",
+    "def walkthrough(triangle):\n",
+    "    if triangle != []:\n",
+    "        head, *tail = triangle\n",
+    "        print(head)\n",
+    "        walkthrough(tail)\n",
+    "\n",
+    "walkthrough(pascal_triangle(pascal_tr, 10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,15 +350,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C2K 30°: 303.15 Klevin\n",
+      "C2F 30°: 86.0 Fahrenheit\n",
+      "F2K 30°: 272.0388888888889 Klevin\n",
+      "F2C 30°: -1.1111111111111112 Celsius\n",
+      "K2C 30°: -243.14999999999998 Celsius\n",
+      "K2F 30°: -405.67 Fahrenheit\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    C = (F - 32) * 5 / 9\n",
+    "    F = C * 9 / 5 + 32\n",
+    "    K = (F + 459.67) * 5 / 9\n",
+    "    F = K * 9 / 5 - 459.67\n",
+    "    K = C + 273.15 \t\n",
+    "    C = K - 273.15\n",
+    "    \n",
+    "Implement a function, which gets two parameters as input: First the temperature and second the mode. The converted temperature is the return value of the function. \n",
+    "The mode can be as follows:\n",
+    "\n",
+    "    F2K: Fahrenheit to Kelvin\n",
+    "    F2C: Fahrenheit to Celsius\n",
+    "    K2F: Kelvin to Fahrenheit\n",
+    "    K2C: Kelvin to Celsius\n",
+    "    C2F: Celsius to Fahrenheit\n",
+    "    C2K: Celsius to Kelvin\n",
+    "\"\"\"\n",
+    "\n",
+    "def f2k(temp):\n",
+    "    \"\"\"F2K: Fahrenheit to Kelvin\"\"\"\n",
+    "    return (temp + 459.67) * 5 / 9\n",
+    "    \n",
+    "def f2c(temp):\n",
+    "    \"\"\"F2C: Fahrenheit to Celsius\"\"\"\n",
+    "    return (temp - 32) * 5 / 9\n",
+    "\n",
+    "def k2f(temp):\n",
+    "    \"\"\"K2F: Kelvin to Fahrenheit\"\"\"\n",
+    "    return temp * 9 / 5 - 459.67\n",
+    "\n",
+    "def k2c(temp):\n",
+    "    \"\"\"K2C: Kelvin to Celsius\"\"\"\n",
+    "    return temp - 273.15\n",
+    "\n",
+    "def c2f(temp):\n",
+    "    \"\"\"C2F: Celsius to Fahrenheit\"\"\"\n",
+    "    return temp * 9 /5 + 32\n",
+    "\n",
+    "def c2k(temp):\n",
+    "    \"\"\"C2K: Celsius to Kelvin\"\"\"\n",
+    "    return temp + 273.15\n",
+    "\n",
+    "def converter(mode, value):\n",
+    "    first, *_, last = mode\n",
+    "    if first == \"f\":\n",
+    "        if last == \"k\":\n",
+    "            return f2k(value)\n",
+    "        else:\n",
+    "            return f2c(value)\n",
+    "    elif first == \"k\":\n",
+    "        if last == \"f\":\n",
+    "            return k2f(value)\n",
+    "        else:\n",
+    "            return k2c(value)\n",
+    "    else:\n",
+    "        if last == \"k\":\n",
+    "            return c2k(value)\n",
+    "        else:\n",
+    "            return c2f(value)\n",
+    "\n",
+    "print(f\"C2K 30°: {converter('c2k', 30)} Klevin\")\n",
+    "print(f\"C2F 30°: {converter('c2f', 30)} Fahrenheit\")\n",
+    "print(f\"F2K 30°: {converter('f2k', 30)} Klevin\")\n",
+    "print(f\"F2C 30°: {converter('f2c', 30)} Celsius\")\n",
+    "print(f\"K2C 30°: {converter('k2c', 30)} Celsius\")\n",
+    "print(f\"K2F 30°: {converter('k2f', 30)} Fahrenheit\")\n"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "25034407fed5d681614dac11a1c0537e8cb49e3a8883c071303eea01322943d9"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
